LAB4 fix sonar bugs